<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".auth.RegisterActivity">

    <TextView
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_marginTop="100dp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@+id/create"
        android:hint="@string/email"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        />

    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:hint="@string/pass"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        android:text="@string/create"
        android:textColor="@android:color/white"
        android:layout_marginTop="60dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/registration_button"
        android:onClick="onCreateAccount"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/login"
        android:onClick="onLoginActivity"/>

</androidx.constraintlayout.widget.ConstraintLayout>